# am-ai-portfolio

./: .gitignore  README.md  logging.yaml.example  pyproject.toml
am-ai-portfolio/: .env.example
am-ai-portfolio/docker/: app.Dockerfile  app.prepub.deploy.sed.yaml  job.Dockerfile  job.deploy.sedsit.yaml  service.prepub.deploy.sed.yaml  service.sit.deploy.sed.yaml
am-ai-portfolio/src/: run_agent.py  run_client.py  streamlit_app.py
am-ai-portfolio/src/agents/marketing/: dynamic.py  qiweibot_agent.py  router.py  tools.py
am-ai-portfolio/src/agents/portfolio/: market_data_expert.py  portfolio_aggregator.py  strategy_judger.py  summary_expert.py
am-ai-portfolio/src/agents/portfolio/tools/: amcell.py
am-ai-portfolio/src/agents/tools/: history_manage.py  sql_permission.py  sql_query.py  sum_numbers.py  utils.py
am-ai-portfolio/src/core/: llm.py  settings.py
am-ai-portfolio/src/schema/: schema.py
am-ai-portfolio/src/security/: shield_client.py
am-ai-portfolio/src/service/: utils.py
am-ai-portfolio/src/service/qiwei/: WXBizJsonMsgCrypt.py  qiwei_bot.py
am-ai-portfolio/src/webpage/: analytics.py
am-ai-portfolio/tests/service/qiwei/: test_qiwei_bot.py  test_tool.py
docker/: app.deploy.sed.yaml  app.sit.deploy.sed.yaml  job.deploy.sed.yaml  service.Dockerfile  service.deploy.sed.yaml
src/: run_service.py
src/agents/: agents.py
src/agents/marketing/: businessGoal.py  portfolio.py  profile.py  requirement.py  shield_router.py  supervisor.py
src/agents/marketing/dynamic_report/: report.py
src/agents/marketing/nodes/: __init__.py  intent_guard.py
src/agents/portfolio/: ai_portfolio.py  portfolio_judger.py  state.py
src/agents/portfolio/tools/: market_data.py
src/agents/requirement/: requirement_QA.py  tools.py
src/agents/tools/: __init__.py  qiwei_tool.py  rag_api.py  visit_rate_analysis.py
src/assets/: style.css
src/client/: client.py
src/core/: logging_config.py
src/jobs/dynamic_report_job/: config.py  run.py
src/schema/: __init__.py
src/security/: __init__.py  llm_shield_sdk_v2.py
src/service/: service.py
src/service/qiwei/: zhiyu_platform.py
src/webpage/: admin.py  utils.py
tests/: convert_dates.py
tests/service/: test_cap_stream.py
tests/service/qiwei/: WXBizJsonMsgCrypt.py
(+12 files in other folders)
