[project]
name = "am-ai-portfolio"
version = "0.1.0"
description = "A collection of AM AI services built with LangGraph, FastAPI and Streamlit"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "docx2txt ~=0.8",
    "duckduckgo-search>=7.3.0",
    "fastapi ~=0.115.5",
    "grpcio >=1.68.0",
    "httpx ~=0.28.0",
    "jiter ~=0.8.2",
    "langchain ~=1.0.5",
    "langchain-core ~=1.0.0",
    "langchain-community ~=0.4.1",
    "langchain-anthropic ~=1.0.0",
    "langchain-aws ~=1.0.0",
    "langchain-chroma ~=1.0.0",
    "langchain-google-genai ~=3.0.0",
    "langchain-google-vertexai>=3.0.3",
    "langchain-groq ~=1.0.1",
    "langchain-ollama ~=1.0.0",
    "langchain-openai ~=1.0.2",
    "langfuse >=2.65.0",
    "langgraph ~=1.0.0",
    "langgraph-checkpoint-mongodb ~=0.1.3",
    "langgraph-checkpoint-postgres ~=2.0.13",
    "langgraph-checkpoint-sqlite ~=2.0.1",
    "langgraph-supervisor ~=0.0.31",
    "langmem ~=0.0.27",
    "numexpr ~=2.10.1",
    "numpy ~=2.3.4",
    "onnxruntime ~= 1.21.1",
    "pandas ~=2.2.3",
    "psycopg[binary,pool] ~=3.2.4",
    "pyarrow >=18.1.0",
    "pydantic ~=2.10.1",
    "pydantic-settings ~=2.12.0",
    "python-dotenv ~=1.0.1",
    "setuptools ~=75.6.0",
    "streamlit ~=1.52.0",
    "uvicorn ~=0.32.1",
    "pycryptodome ~=3.23.0",
    "pyyaml ~=6.0.1",
    "pandasql ~=0.7.3",
    "pymysql>=1.1.2",
    "sqlalchemy>=2.0.0",
    "msgpack>=1.1.1",
    "markdown-pdf~=1.10",
    "openpyxl>=3.1.5",
    "chinese-calendar>=1.11.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-env",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "msgpack",
]

# Group for the minimal dependencies to run just the client and Streamlit app.
# These are also installed in the default dependencies.
# To install run: `uv sync --frozen --only-group client`
client = [
    "httpx~=0.28.0",
    "pydantic ~=2.10.1",
    "python-dotenv ~=1.0.1",
    "streamlit~=1.52.0",
    "pyyaml ~=6.0.1",
]

[[tool.uv.index]]
url = "http://repo.citicsinfo.com/repository/pip/simple"
default = true
